name:                miso-aframe
version:             0.1
synopsis:            Miso bindings for A-Frame framework for WebVR.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:
    Miso.AFrame
    Miso.AFrame.Core.Animation
    Miso.AFrame.Core.Utils
    Miso.AFrame.Primitives
    Miso.AFrame.Primitives.Attributes
    Miso.AFrame.Primitives.Camera
    Miso.AFrame.Primitives.Cursor
    Miso.AFrame.Primitives.Light
  build-depends:
                base,
                ghcjs-base,
                aeson,
                unordered-containers,
                miso
  default-language: Haskell2010

executable hello-world
  hs-source-dirs:      examples/hello-world/
  main-is:             Main.hs
  build-depends:
    base,
    miso-aframe,
    miso
  default-language:    Haskell2010

executable haskell-logo-voxels
  hs-source-dirs:      examples/haskell-logo-voxels/
  main-is:             Main.hs
  build-depends:
    base,
    miso-aframe,
    miso
  default-language:    Haskell2010
