name:                miso-aframe
version:             0.1
synopsis:            Miso bindings for A-Frame framework for WebVR.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:
    Miso.AFrame

    Miso.AFrame.Core
    Miso.AFrame.Core.Animation
    Miso.AFrame.Core.Assets
    Miso.AFrame.Core.Component
    Miso.AFrame.Core.Components
    Miso.AFrame.Core.Entity
    Miso.AFrame.Core.Scene
    Miso.AFrame.Core.System
    Miso.AFrame.Core.Types
    Miso.AFrame.Core.Internal.Utils

    Miso.AFrame.Core.Primitives.Box
    Miso.AFrame.Core.Primitives.Camera
    Miso.AFrame.Core.Primitives.Cursor
    Miso.AFrame.Core.Primitives.Sphere
    Miso.AFrame.Core.Primitives.Sky
    Miso.AFrame.Core.Primitives.Text
  build-depends:
                base,
                ghcjs-base,
                aeson,
                unordered-containers,
                miso
  default-language: Haskell2010

executable guide-basic-scene
  hs-source-dirs:      examples/guide-basic-scene
  main-is:             Main.hs
  build-depends:
    base,
    ghcjs-base,
    aeson,
    miso-aframe,
    miso
  default-language:    Haskell2010

executable hello-world
  hs-source-dirs:      examples/hello-world/
  main-is:             Main.hs
  build-depends:
    base,
    miso-aframe,
    miso
  default-language:    Haskell2010

executable haskell-logo-voxels
  hs-source-dirs:      examples/haskell-logo-voxels/
  main-is:             Main.hs
  build-depends:
    base,
    miso-aframe,
    miso
  default-language:    Haskell2010
